test/fixtures/expressions/invalid_contents/escaped_quote_in_quote.mf2
{1 a |\|| thing}
=== spans ===
                    {1 a |\|| thing}
Pattern             ^^^^^^^^^^^^^^^^ 0:0-0:16
LiteralExpression   ^^^^^^^^^^^^^^^^ 0:0-0:16
Number               ^               0:1-0:2
Number.integral      ^               0:1-0:2
=== diagnostics ===
Placeholder expression contains invalid content. (at @3..15)
  {1 a |\|| thing}
     ^^^^^^^^^^^^
=== formatted ===
(cannot format due to fatal errors)
=== ast ===
Pattern {
    parts: [
        LiteralExpression {
            span: @0..16,
            literal: Number {
                start: @1,
                raw: "1",
                is_negative: false,
                integral_len: 1,
                fractional_len: None,
                exponent_len: None,
            },
            annotation: None,
            attributes: [],
        },
    ],
}